cmake_minimum_required(VERSION 3.26)
project(Week6)

set(CMAKE_CXX_STANDARD 17)

add_executable(Week6 main.cpp
        Bai1.cpp
        Bai2.cpp
        Bai3.cpp
        Bai4.cpp
        Bai5.cpp
        Bai8.cpp
        Bai7.cpp
        Bai9.cpp
        Bai6.cpp)
add_executable(new_target Bai1.cpp)
add_executable(new_target1 Bai2.cpp)
add_executable(new_target2 Bai3.cpp)
add_executable(new_target3 Bai4.cpp)
add_executable(new_target4 Bai5.cpp)
add_executable(new_target5 Bai8.cpp)
add_executable(new_target6 Bai7.cpp)
add_executable(new_target7 Bai9.cpp)
add_executable(new_target8 Bai6.cpp)
